# container-copier

./: .gitignore  Cargo.toml  Dockerfile  README.md  build.rs
.gitea/workflows/: deploy.yaml
src/: main.rs
